--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Tiago Nunes | Dev</title>
+
   </head>
   <body>
+
+    <div id="particles-js">
+      <script src="./src/particles/particles.js"></script>
+      <script src="./src/particles/app.js"></script>
+    </div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+
+    </div>
   </body>
 </html>
