nao mudou muita coisa

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
+  
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,14 +10,14 @@
   </head>
   <body>
 
+    
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    
     <div id="particles-js">
       <script src="./src/particles/particles.js"></script>
       <script src="./src/particles/app.js"></script>
     </div>
-
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-
 
     </div>
   </body>
